# variant_myth

./: .copier-answers.yml  .gitignore  .tarpaulin.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Readme.md  book.toml  crates.js  get_data.py  get_data.sh  help.html  release-plz.toml  search-index.js  settings.html  src-files.js  tarpaulin.toml  test_intron_variant.vcf
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: msrv.yaml  release-plz.yaml  test.yml  tests.yaml  website.yaml
benches/: feature.rs  gene.rs  interval_access.rs  interval_build.rs
docs/: SUMMARY.md  install.md  usage.md
search.desc/variant_myth/: variant_myth-desc-0-.js
src/: annotation.rs  annotations_db.rs  cli.rs  effect.rs  error.rs  exons2sequences.rs  interval_tree.rs  lib.rs  main.rs  memoizor.rs  myth.rs  output.rs  positions.rs  sequences_db.rs  test_data.rs  translate.rs  utils.rs  variant.rs  variant2gene.rs  variant2myth.rs
src/output/: json.rs  mod.rs  parquet.rs  writer.rs
src/test_data/: annotations.gff3  references.fasta  variants.vcf
src/variant2myth/: feature_presence.rs  sequence_analysis.rs  splice_variant.rs  start_stop_lost.rs
src/variant_myth/: annotation.rs.html  annotations_db.rs.html  cli.rs.html  error.rs.html  interval_tree.rs.html  lib.rs.html  myth.rs.html  sequences_db.rs.html  translate.rs.html  variant.rs.html
tests/: functional.rs  help.rs
tests/data/: annotations.gff3  references.fasta  variants.vcf
tests/data/truth/: annotator_feature.json  annotator_feature.parquet  annotator_gene.json  annotator_gene.parquet
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/iter/traits/collect/: trait.FromIterator.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/ser/: trait.Serialize.js
type.impl/anyhow/: type.Result.js
type.impl/core/ops/range/: struct.Range.js
variant_myth/: all.html  fn.variants2myth.html  fn.vcf2json.html  index.html  sidebar-items.js
variant_myth/annotation/: enum.Frame.html  enum.Strand.html  index.html  sidebar-items.js  struct.Annotation.html  struct.Attribute.html
variant_myth/annotations_db/: index.html  sidebar-items.js  struct.AnnotationsDataBase.html
variant_myth/cli/: index.html  struct.Command.html
variant_myth/error/: enum.Error.html  index.html  type.Result.html
variant_myth/interval_tree/: index.html  sidebar-items.js  struct.Entry.html  struct.InternalEntry.html  struct.IntervalTree.html  type.Interval.html
variant_myth/myth/: enum.AnnotationMythBuilderError.html  enum.Effect.html  index.html  sidebar-items.js  struct.AnnotationMyth.html  struct.AnnotationMythBuilder.html  struct.Myth.html
variant_myth/sequences_db/: fn.rev_comp.html  index.html  sidebar-items.js  struct.SequencesDataBase.html
variant_myth/translate/: constant.STANDARD.html  fn.nuc2bit.html  fn.seq2bit.html  index.html  sidebar-items.js  struct.Translate.html
variant_myth/variant/: index.html  sidebar-items.js  struct.Variant.html  struct.VcfReader.html
website/: SUMMARY.md  how_variant_myth_work.md  install.md  usage.md
