[package]
name    = "variant_myth"
version = "0.1.0"
authors = [
	"Pierre Marijon <pierre@marijon.fr>"
]

description  = "A variant annotater."
edition      = "2021"
rust-version = "1.74"

homepage      = "https://natir.github.io/variant-myth"
repository    = "https://github.com/natir/variant-myth"
documentation = "https://natir.github.io/variant-myth"

readme       = "Readme.md"
license-file = "LICENSE"


[[bin]]
name = "variant_myth"
path = "src/main.rs"


[dependencies]
# Specific
ahash          = { version = "0.8", features = ["compile-time-rng"] }
bstr           = { version = "1", features = ["serde"] }
iitiiri        = { git = "https://github.com/natir/iitiiri.git" }

# Other
derive_builder   = { version = "0.20" }

# Multi-threading
rayon          = { version = "1", optional = true }

# Input Output management
csv            = { version = "1" }
niffler        = { version = "2", features = ["bzip2", "lzma", "gz", "bgz"] }
serde          = { version = "1", features = ["derive"] }
noodles        = { version = "0.78", features = ["fasta"] }
serde_json     = { version = "1" }

# CLI management
clap           = { version = "4", features = ["derive"] }

# Error management
thiserror      = { version = "1" }
anyhow         = { version = "1"}

# Logging and error management
log            = { version = "0.4" }
stderrlog      = { version = "0.5" }


[dev-dependencies]
## Benchmark management
criterion      = { version = "0.5" }

## Functional test
biotest        = { version = "0.2", features = ["sequence", "vcf", "fasta"] }
assert_cmd     = { version = "2" }
tempfile       = { version = "3" }


[features]
default = []
parallel = ["dep:rayon", "iitiiri/parallel"]
bench = []


[profile.release]
lto             = 'thin'
opt-level       = 3
overflow-checks = false
panic           = 'abort'
incremental     = false


[profile.profiling]
inherits = "release"
debug    = true
